Fixed About bug on small screens

--- a/client/src/components/About/About.module.scss
+++ b/client/src/components/About/About.module.scss
@@ -24,7 +24,7 @@
 
 .Details{
     display: block;
-    min-width: 55rem;
+    width: 60%;
     // min-height: 40rem;
     text-align: center;
     background-color: #191D1F;
@@ -54,5 +54,28 @@
       -webkit-backdrop-filter: blur(2px);
       backdrop-filter: blur(5px);
       background-color: rgba(2, 27, 10, 0.603);  
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .Details{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 680px) {
+    .Details{
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .Details{
+        width: 100%;
+
+        
+        &__Abstract{
+            font-size: 1.2rem;
+        }
     }
 }
